buildscript {
  repositories {
    jcenter() 
  }

  dependencies {
    classpath "com.github.jengelman.gradle.plugins:shadow:1.2.3"
  }
}

apply plugin: 'application'
apply plugin: 'eclipse'
apply plugin: "com.github.johnrengelman.shadow"

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            srcDir 'src/main/java'
        }
        resources {
            srcDir 'src/main/resources'
        }
    }
}

sourceCompatibility = 1.8
mainClassName = "utybo.branchingstorytree.swing.OpenBST"

jar {
    manifest {
        attributes 'Implementation-Title': "OpenBST", 'Implementation-Version': version
    }
}

dependencies {
    compile 'org.apache.logging.log4j:log4j-api:2.8.1'
    compile 'org.apache.logging.log4j:log4j-core:2.8.1'
    compile 'com.miglayout:miglayout-swing:4.2'
    compile project(':bst-java')
    compile 'commons-lang:commons-lang:2.6'
    compile 'com.github.rjeschke:txtmark:0.13'
    compile 'com.google.code.gson:gson:2.8.0'
    compile 'commons-io:commons-io:2.5'
    compile fileTree(dir: 'libs', include: ['*.jar'])
}

shadowJar {
  classifier = "full"
}
